Tango/DLL Examples/Visual_Basic/SourceCode/Tango_X.vb

Option Strict Off
Option Explicit On
Module Module1
    Declare Function LSX_CreateLSID Lib "Tango_X.dll" (ByRef LSID As Integer) As Integer
    Declare Function LSX_FreeLSID Lib "Tango_X.dll" (ByVal LSID As Integer) As Integer
	Declare Function LSX_Connect Lib "Tango_X.dll" (ByVal LSID As Integer) As Integer
	Declare Function LSX_ConnectSimple Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAnInterfaceType As Integer, ByVal pcAComName As String, ByVal lABaudRate As Integer, ByVal bAShowProt As Integer) As Integer
	Declare Function LSX_ConnectEx Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pAControlInitPar As Object) As Integer
	Declare Function LSX_Disconnect Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_LoadConfig Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcFileName As String) As Integer
	Declare Function LSX_SaveConfig Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcFileName As String) As Integer
	Declare Function LSX_MoveAbs Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_MoveRel Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_Calibrate Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_RMeasure Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetPitch Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetPos Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetActiveAxes Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lFlags As Integer) As Integer
	Declare Function LSX_SetVel Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetAccel Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetReduction Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetDelay Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lDelay As Integer) As Integer
	Declare Function LSX_SetSwitchPolarity Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXP As Integer, ByVal lYP As Integer, ByVal lZP As Integer, ByVal lAP As Integer) As Integer
	Declare Function LSX_SetSwitchActive Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXA As Integer, ByVal lYA As Integer, ByVal lZA As Integer, ByVal lAA As Integer) As Integer
	Declare Function LSX_SetJoystickOn Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bPositionCount As Integer, ByVal bEncoder As Integer) As Integer
	Declare Function LSX_SetJoystickOff Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SoftwareReset Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetDigitalOutput Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer, ByVal bValue As Integer) As Integer
	Declare Function LSX_GetDigitalInputs Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plValue As Integer) As Integer
	Declare Function LSX_SetAnalogOutput Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer, ByVal lValue As Integer) As Integer
	Declare Function LSX_GetAnalogInput Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer, ByRef plValue As Integer) As Integer
    Declare Function LSX_GetHdiKeys Lib "Tango_dll.dll" (ByVal LSID As Integer, ByRef plKey1 As Integer, ByRef plKey2 As Integer, ByRef plKey3 As Integer, ByRef plKey4 As Integer) As Integer
	Declare Function LSX_SetLimit Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dMinRange As Double, ByVal dMaxRange As Double) As Integer
	Declare Function LSX_SetLimitControl Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal bActive As Integer) As Integer
	Declare Function LSX_GetPos Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_GetStatus Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcStat As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_GetEncoderMask Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plFlags As Integer) As Integer
	Declare Function LSX_StopAxes Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetAbortFlag Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_MoveRelSingleAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_MoveAbsSingleAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_SetControlPars Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetMotorCurrent Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetVelSingleAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dVel As Double) As Integer
	Declare Function LSX_SetAccelSingleAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dAccel As Double) As Integer
	Declare Function LSX_CalibrateEx Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lFlags As Integer) As Integer
	Declare Function LSX_RMeasureEx Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lFlags As Integer) As Integer
	Declare Function LSX_SetShowProt Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bShowProt As Integer) As Integer
	Declare Function LSX_GetAnalogInputs2 Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plPT100 As Integer, ByRef plMV As Integer, ByRef plV24 As Integer) As Integer
	Declare Function LSX_SendString Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcStr As String, ByVal pcRet As String, ByVal lMaxLen As Integer, ByVal bReadLine As Integer, ByVal lTimeOut As Integer) As Integer
	Declare Function LSX_SetSpeedPoti Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bSpeedPoti As Integer) As Integer
	Declare Function LSX_SetTVRMode Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXT As Integer, ByVal lYT As Integer, ByVal lZT As Integer, ByVal lAT As Integer) As Integer
	Declare Function LSX_SetAutoStatus Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lValue As Integer) As Integer
	Declare Function LSX_GetStatusAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcStatusAxisStr As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_SetDigIO_Off Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer) As Integer
	Declare Function LSX_SetDigIO_Polarity Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer, ByVal bHigh As Integer) As Integer
	Declare Function LSX_SetDigIO_EmergencyStop Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer) As Integer
	Declare Function LSX_SetDigIO_Distance Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lIndex As Integer, ByVal bFkt As Integer, ByVal dDist As Double, ByVal lAxis As Integer) As Integer
	Declare Function LSX_SetDimensions Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
	Declare Function LSX_MoveRelShort Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetEncoderPeriod Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetJoystickDir Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXD As Integer, ByVal lYD As Integer, ByVal lZD As Integer, ByVal lAD As Integer) As Integer
	Declare Function LSX_SetEncoderMask Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lValue As Integer) As Integer
	Declare Function LSX_SetGear Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetHandWheelOn Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bPositionCount As Integer, ByVal bEncoder As Integer) As Integer
	Declare Function LSX_SetHandWheelOff Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetFactorTVR Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetTargetWindow Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetController Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXC As Integer, ByVal lYC As Integer, ByVal lZC As Integer, ByVal lAC As Integer) As Integer
	Declare Function LSX_SetControllerCall Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lCtrCall As Integer) As Integer
	Declare Function LSX_SetControllerSteps Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetControllerFactor Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_SetControllerTWDelay Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lCtrTWDelay As Integer) As Integer
	Declare Function LSX_SetEncoderRefSignal Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXR As Integer, ByVal lYR As Integer, ByVal lZR As Integer, ByVal lAR As Integer) As Integer
	Declare Function LSX_SetEncoderPosition Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bValue As Integer) As Integer
	Declare Function LSX_GetVersionStr Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcVers As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_GetError Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plErrorCode As Integer) As Integer
	Declare Function LSX_GetPosSingleAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByRef pdPos As Double) As Integer
	Declare Function LSX_SetDistance Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dA As Double) As Integer
	Declare Function LSX_GetPosEx Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double, ByVal bEncoder As Integer) As Integer
	Declare Function LSX_SetShowCmdList Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bShowCmdList As Integer) As Integer
	Declare Function LSX_SetWriteLogText Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bAWriteLogText As Integer) As Integer
	Declare Function LSX_SetControllerTimeout Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lACtrTimeout As Integer) As Integer
	Declare Function LSX_SetEncoderActive Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lFlags As Integer) As Integer
	Declare Function LSX_GetSnapshotCount Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plSnsCount As Integer) As Integer
	Declare Function LSX_GetSnapshotPos Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdA As Double) As Integer
	Declare Function LSX_SetCorrTblOff Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetCorrTblOn Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcAFileName As String) As Integer
